# harness-mcp

./: .gitignore  README.md  harness-questionnaire.md  pyproject.toml  seed.example.yaml  seed.py
.claude/skills/debugger/: SKILL.md
.claude/skills/java-standards/: SKILL.md
credsails-workshop/: .mcp.json  README.md
credsails-workshop/.claude/: .genx-bom  launch.json  rules  settings.json
credsails-workshop/.git-nested-backup/: COMMIT_EDITMSG  FETCH_HEAD  HEAD  config  index  packed-refs
credsails-workshop/artifacts/: README.md
credsails-workshop/backend/: .env.example  alembic.ini  pyproject.toml
credsails-workshop/backend/alembic/: env.py
credsails-workshop/backend/src/app/: __init__.py  llm_client.py  main.py  orchestrator.py  store.py
credsails-workshop/backend/src/app/agents/: extractor.py  schema_extractor.py
credsails-workshop/backend/src/app/canned/: diligence.py  financials.py  monitor.py  scorecard.py
credsails-workshop/backend/src/app/fixtures/: rag_chat.json
credsails-workshop/backend/src/app/prompts/: __init__.py
credsails-workshop/backend/src/app/static/: api.js  app.js  index.html  styles.css
credsails-workshop/backend/tests/: conftest.py  test_pipeline.py  test_versioning_audit.py
credsails-workshop/data/: clf_10k.txt
demo/test-sdlc-with-mcp/: .gitignore  claude.md
demo/test-sdlc-with-mcp/backend/: .env.example  README.md  pyproject.toml
demo/test-sdlc-with-mcp/backend/alembic/: env.py
demo/test-sdlc-with-mcp/backend/alembic/versions/: 0001_create_tasks.py
demo/test-sdlc-with-mcp/backend/src/app/: main.py  settings.py
demo/test-sdlc-with-mcp/backend/src/app/common/: db.py
demo/test-sdlc-with-mcp/backend/src/app/tasks/: exceptions.py  models.py  router.py  schemas.py  service.py
demo/test-sdlc-with-mcp/backend/tests/tasks/: conftest.py  test_router.py  test_service.py
demo/test-sdlc-without-mcp/: .gitignore
migrations/: 001_initial.sql
src/sdlc_mcp/: __init__.py  __main__.py  config.py  db.py  models.py  seed.py  server.py  store.py  validation.py
tests/: smoke_test.py
(+285 files in other folders)
