[project]
name = "test-harness-project"
version = "0.1.0"
description = "Test project for harness verification"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy>=2.0",
    "uvicorn[standard]",
]

[project.optional-dependencies]
dev = [
    "alembic",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
